fix(headerSemantics): add gap for header element

--- a/packages/layout/src/assets/css/components/header.css
+++ b/packages/layout/src/assets/css/components/header.css
@@ -2,7 +2,8 @@
   --header-bg-color: #ffffff;
   --header-border-color: var(--border-color);
   --header-font-size: var(--font-size);
-  --header-gap: 1.5rem;
+  --header-gap-v: 1.5rem;
+  --header-gap-h: 0.5rem;
   --header-logo-max-width: 150px;
   --header-padding-v: 1em;
 
@@ -10,8 +11,7 @@
   border-bottom: 1px solid var(--header-border-color);
   display: grid;
   font-size: var(--header-font-size);
-  column-gap: 0;
-  row-gap: 0.5rem;
+  gap: var(--header-gap-h) 0;
   grid-template-columns: 1fr auto;
   padding-bottom: var(--header-padding-v);
   padding-top: var(--header-padding-v);
@@ -103,8 +103,7 @@
 @media screen and (min-width: 576px) {
   .layout > header {
     grid-template-columns: auto 1fr auto auto;
-    column-gap: 1.5rem;
-    row-gap: 0;
+    gap: 0 var(--header-gap-v);
   }
 
   .layout > header > .main-menu,
